package app.domain.model;public class RegisterVaccinationCenter {
}
